--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -36,6 +36,7 @@ jobs:
         with:
           node-version: "23"
           cache: npm
+          cache-dependency-path: frontend/package-lock.json
 
       # Setup Pages (configures base path, etc.)
       - name: Setup Pages
