chore: maybe fix cloudflare pages

--- a/frontend/wrangler.jsonc
+++ b/frontend/wrangler.jsonc
@@ -1,4 +1,5 @@
 {
     "name": "wordseq",
-    "compatibility_date": "2022-07-12"
+    "compatibility_date": "2022-07-12",
+    "pages_build_output_dir": "./dist"
   }
